Add preview image to fieldsets
See #374

--- a/app/views/archetype.default.html
+++ b/app/views/archetype.default.html
@@ -104,24 +104,43 @@
     <!-- Fieldset picker. -->
     <div class="usky-grid fieldsetPicker" ng-class="{withGroups: overlayMenu.fieldsetGroups.length > 1}" ng-if="overlayMenu.show">
         <div class="cell-tools-menu" ng-style="overlayMenu.style" delayed-mouseleave="closeFieldsetPicker()" archetype-click-outside="closeFieldsetPicker()">
-            <h5>
-                <archetype-localize key="addFieldset">Add an item</archetype-localize>
-            </h5>
-            <ul class="groups" ng-show="overlayMenu.fieldsetGroups.length > 1">
-                <li ng-repeat="fieldsetGroup in overlayMenu.fieldsetGroups" ng-class="{active: fieldsetGroup == overlayMenu.activeFieldsetGroup}">
-                    <a ng-click="overlayMenu.activeFieldsetGroup = fieldsetGroup">
-                        {{fieldsetGroup.name}}
-                    </a>
-                </li>
-            </ul>
-            <ul class="elements">
-                <li ng-repeat="fieldset in overlayMenu.activeFieldsetGroup.fieldsets">
-                    <a ng-click="pickFieldset(fieldset.alias, overlayMenu.index)" href>
-                        <i class="icon {{fieldset.icon}}"></i>
-                        {{fieldset.label}}
-                    </a>
-                </li>
-            </ul>
+            <div ng-show="!overlayMenu.fieldsetPreview">
+                <h5>
+                    <archetype-localize key="addFieldset">Add an item</archetype-localize>
+                </h5>
+                <ul class="groups" ng-show="overlayMenu.fieldsetGroups.length > 1">
+                    <li ng-repeat="fieldsetGroup in overlayMenu.fieldsetGroups" ng-class="{active: fieldsetGroup == overlayMenu.activeFieldsetGroup}">
+                        <a ng-click="overlayMenu.activeFieldsetGroup = fieldsetGroup">
+                            {{fieldsetGroup.name}}
+                        </a>
+                    </li>
+                </ul>
+                <ul class="elements">
+                    <li ng-repeat="fieldset in overlayMenu.activeFieldsetGroup.fieldsets">
+                        <a ng-click="pickFieldset(fieldset.alias, overlayMenu.index)" href>
+                            <i class="icon {{fieldset.icon}}"></i>
+                            {{fieldset.label}}
+                        </a>
+                        <div class="fieldsetPreviewOpen" ng-if="fieldset.previewImage">
+                            <a href ng-click="openFieldsetPreview(fieldset)"><archetype-localize key="previewFieldsetOpen">(see preview)</archetype-localize></a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div ng-show="overlayMenu.fieldsetPreview" class="fieldsetPreview">
+                <h5>
+                    <archetype-localize key="previewFieldsetHeader">Preview: </archetype-localize>{{overlayMenu.fieldsetPreview.label}}
+                </h5>
+                <div class="fieldsetPreviewClose">
+                    <a href ng-click="closeFieldsetPreview()"><archetype-localize key="previewFieldsetClose">(close preview)</archetype-localize></a>
+                </div>
+                <div class="fieldsetPreviewImage">
+                    <img src="{{overlayMenu.fieldsetPreview.previewImage}}" />
+                </div>
+                <div class="fieldsetPreviewClose">
+                    <a href ng-click="closeFieldsetPreview()"><archetype-localize key="previewFieldsetClose">(close preview)</archetype-localize></a>
+                </div>
+            </div>
         </div>
     </div>
 </div>
