--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -290,6 +290,12 @@
             overflow: visible;
             vertical-align: top;  
             height: 90px;        
+            .fieldsetPreviewOpen {
+                font-style: italic;
+                a:hover {
+                    text-decoration: underline;
+                }
+            }
         }
         ul.groups {
             display: block;
@@ -308,6 +314,16 @@
                     color: #999;
                     text-decoration: none;
                 }
+            }
+        }
+
+        .fieldsetPreview {
+            .fieldsetPreviewClose {
+                font-size: 12px;
+                text-align: center;
+            }
+            .fieldsetPreviewImage {
+                padding: 6px 0px;
             }
         }
     }
@@ -390,10 +406,10 @@
         small {
             margin-left: 5px;
         }
-        
+
         a {
             float: right;
-            
+
             img {
                 width: 35px;
             }
@@ -439,7 +455,8 @@
     .archetypeFieldsetOption {
         margin-bottom: 15px;
         margin-right: 15px;
-        input[type=text]{
+
+        input[type=text] {
             max-width: 100%;
             width: 100%;
         }
@@ -457,7 +474,7 @@
             margin-bottom: 5px;
         }
 
-        label{
+        label {
             width: 400px;
         }
     }
@@ -497,7 +514,7 @@
         label {
             width: 100%;
         }
-        
+
         input[type=text] {
             width: 100%;
         }
@@ -532,10 +549,10 @@
                     }
                 }
             }
-        }        
+        }
     }
 
-    .archetypeMaxFieldsets{
+    .archetypeMaxFieldsets {
         border: 1px solid #ddd;
         width: 40px;
         text-align: right;
@@ -548,7 +565,7 @@
 
     .archetypePropertyCollapser {
         margin-top: 10px;
-        
+
         div {
             margin-bottom: 10px;
             margin-right: 15px;
@@ -561,6 +578,10 @@
 
     .fieldsetIcon {
         margin-right: 10px;
+    }
+
+    small {
+        color: #817f85;
     }
 }
 
