A bit more styling + localization

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -319,6 +319,7 @@
 
         .fieldsetPreview {
             .fieldsetPreviewClose {
+                font-style: italic;
                 font-size: 12px;
                 text-align: center;
             }
