Open preview image in a new window when clicked

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -325,6 +325,13 @@
             }
             .fieldsetPreviewImage {
                 padding: 6px 0px;
+                img {
+                    height: auto;
+                    max-width: 100%;
+                    vertical-align: middle;
+                    border: 0;
+                    cursor: zoom-in;
+                }
             }
         }
     }
