--- a/app/views/archetype.default.html
+++ b/app/views/archetype.default.html
@@ -139,7 +139,9 @@
                     <a href ng-click="closeFieldsetPreview()"><archetype-localize key="previewFieldsetClose">(close preview)</archetype-localize></a>
                 </div>
                 <div class="fieldsetPreviewImage">
-                    <img src="{{overlayMenu.fieldsetPreview.previewImage}}" />
+                    <a href="{{overlayMenu.fieldsetPreview.previewImage}}" target="_blank">
+                        <img src="{{overlayMenu.fieldsetPreview.previewImage}}" />
+                    </a>
                 </div>
                 <div class="fieldsetPreviewClose">
                     <a href ng-click="closeFieldsetPreview()"><archetype-localize key="previewFieldsetClose">(close preview)</archetype-localize></a>
