--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -249,7 +249,7 @@
     .archetypeAddButton {
         color: #ddd;
         .icon {
-            vertical-align: text-top;
+            vertical-align: middle;
         }
         &:hover {
             color: #333;
@@ -355,9 +355,11 @@
 
     // Necessary to ensure empty lists can be dropped onto when sorting nested fieldsets.
     .archetypeSortable.archetypeEmpty {
-        min-height: 42px;
-        border: 1px dashed #dddddd;
-        margin-top: 5px;
+        &.archetypeCrossDraggable {
+            min-height: 42px;
+            border: 1px dashed #dddddd;
+            margin-top: 5px;
+        }
     }
 }
 
