--- a/app/views/archetype.default.html
+++ b/app/views/archetype.default.html
@@ -12,7 +12,7 @@
 
     <!-- Mandatory validation. -->
     <input type="hidden" name="archetypeMandatory" ng-model="model.mandatoryValidation" ng-required="model.validation.mandatory" />
-    <span class="help-inline" val-msg-for="archetypeMandatory" val-toggle-msg="required">Required</span>
+    <div><span class="help-inline" val-msg-for="archetypeMandatory" val-toggle-msg="required"><archetype-localize key="required">Required</archetype-localize></span></div>
 
     <!-- Fieldsets. -->
     <ul ui-sortable="sortableOptions" class="archetypeSortable" ng-class="{archetypeEmpty: model.value.fieldsets.length === 0 || sortingLastItem(), archetypeCrossDraggable: model.config.enableCrossDragging}" ng-model="model.value.fieldsets">
