--- a/app/views/archetype.config.html
+++ b/app/views/archetype.config.html
@@ -35,7 +35,7 @@
                     <div class="archetypeFieldsetOption">
                         <label for="archetypeFieldPreview_{{$index}}">Preview image</label>
                         <input type="text" id="archetypeFieldPreview_{{$index}}" ng-model="fieldset.previewImage" on-keyup="markAliasDirty(fieldset)" required />
-                        <small>A relative path to a preview image, e.g. "/assets/fieldset.png" (max 360px wide).</small>
+                        <small>A relative path to a preview image, e.g. "/assets/fieldset.png".</small>
                     </div>
                     <div class="archetypeFieldsetOption" ng-show="archetypeConfigRenderModel.enableMultipleFieldsets">
                         <label for="archetypeFieldIcon_{{$index}}"><archetype-localize key="icon">Icon</archetype-localize></label>
