--- a/app/views/archetype.default.html
+++ b/app/views/archetype.default.html
@@ -140,7 +140,7 @@
                 </div>
                 <div class="fieldsetPreviewImage">
                     <a href="{{overlayMenu.fieldsetPreview.previewImage}}" target="_blank">
-                        <img src="{{overlayMenu.fieldsetPreview.previewImage}}" />
+                        <img ng-src="{{overlayMenu.fieldsetPreview.previewImage}}" />
                     </a>
                 </div>
                 <div class="fieldsetPreviewClose">
