--- a/app/views/archetype.config.html
+++ b/app/views/archetype.config.html
@@ -53,7 +53,7 @@
                                     <i class="icon icon-navigation handle" ng-show="canSortProperty(fieldset)"></i>
                                 </div>
                                 <div class="archetypePropertyTitle" ng-click="focusProperty(fieldset.properties, property)">
-                                    {{property.label}} ({{property.alias}}) - <span>{{getDataTypeNameByGuid(property.dataTypeGuid)}}</span>
+                                    {{property.label}} <span ng-if="property.required" class="property-required">*</span> ({{property.alias}}) - <span>{{getDataTypeNameByGuid(property.dataTypeGuid)}}</span>
                                 </div>
                                 <div class="archetypePropertyCollapser" ng-hide="property.collapse && property.label">
                                     <div>
