Update links and blurb in the config

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -429,6 +429,10 @@
     .manual-link {
         color: blue;
     }
+    
+    .donate-link {
+        font-weight: 700;
+    }
 
     ul {
         list-style: none;
