--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -357,6 +357,7 @@
                 }
             }
         }
+        
         .settings {
             padding: 14px;
             background-color: #f8f8f8;
@@ -391,6 +392,7 @@
     .archetypeEditorControls {
         float: right;
     }
+    
     .archetypeEditorControls, .archetypeFieldsetGroups {
         i {
             cursor: pointer;
@@ -433,6 +435,22 @@
     .donate-link {
         font-weight: 700;
     }
+    
+    .sponsors {
+        padding-bottom: 10px;
+        margin-bottom: 5px;
+        margin-left: 5px;
+        display: inline-table;
+        float: right;
+        
+        a {
+            float: none;
+        }
+        
+        h4 {
+            border-bottom: 1px solid #ccc;
+        }
+    }
 
     ul {
         list-style: none;
@@ -453,6 +471,8 @@
 
     .archetypeFieldsets {
         margin-left: 0;
+        border-top: 5px solid;
+        padding-top: 5px;
     }
 
     .archetypeFieldsetWrapper {
