--- a/app/views/archetype.config.html
+++ b/app/views/archetype.config.html
@@ -4,7 +4,7 @@
     <p>At a minimum your Archetype needs at least one fieldset with at least one property. Please use the link below for the full manual. We would really love a donation if you find Archetype useful. Your company can also sponsor a sprint!</p>
     <p>
         <a class="manual-link" href="https://github.com/kgiszewski/ArchetypeManual" target="_blank">Archetype Manual</a> | 
-        <a class="manual-link" href="https://github.com/kgiszewski/Archetype/blob/master/Terms%20of%20Service.md" target="_blank">Terms of Service</a> | 
+        <a class="manual-link" href="https://github.com/kgiszewski/Archetype/blob/master/Information%20Collection%20Disclosure.md" target="_blank">Information Collection Disclosure</a> |
         <a class="manual-link" href="https://www.youtube.com/watch?v=79LksNwGjLk" target="_blank">Quick Start Video</a> | 
         <a class="manual-link" href="https://twitter.com/archetypekit" target="_blank">Twitter</a> |
         <a class="manual-link" href="https://github.com/kgiszewski/Archetype" target="_blank">GitHub</a> |
