make the container/boundaries for the fieldset collapser more visible

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -232,9 +232,9 @@
         .archetypeCollapser {
             clear: both;
             height: 100%;
-            padding: 12px 0 0 20px;
-            background-color: #fff;
-            border-radius: 0 0 0 5px;
+            padding: 24px 20px 0 20px;
+            background-color: #fafafa;
+            border-top: 1px dashed #e0e0e0;
             line-height: 20px;
 
             form {
