--- a/app/views/archetype.default.html
+++ b/app/views/archetype.default.html
@@ -2,12 +2,11 @@
 <div class="archetypeEditor ng-class:model.config.customCssClass">
     <textarea class="archetypeDeveloperModel" ng-show="model.config.developerMode" ng-model="model.value"></textarea>
 
-    <!-- "Add" button. -->
-    <div ng-show="showAddButton()">
-        <a class="archetypeAddButton" ng-click="openFieldsetPicker(0, $event)" prevent-default>
-            <i class="icon icon-add"></i>
+    <!-- Empty content display. -->
+    <div class="archetypeEmptyContent" ng-show="showEmptyContentHint()">
+        <span>
             <archetype-localize key="addFieldset">Add an item</archetype-localize>
-        </a>
+        </span>
     </div>
 
     <!-- Mandatory validation. -->
@@ -108,6 +107,13 @@
             </fieldset>
         </li>
     </ul>
+
+    <!-- "Add" button. -->
+    <div class="archetypeFooter" ng-show="showAddButton()">
+        <a class="archetypeAddButton" ng-click="openFieldsetPicker(model.value.fieldsets.length, $event)" prevent-default> 
+            <i class="icon icon-add"></i>
+        </a>
+    </div>
 
     <!-- Fieldset picker. -->
     <div class="usky-grid fieldsetPicker" ng-class="{withGroups: overlayMenu.fieldsetGroups.length > 1}" ng-if="overlayMenu.show">
