--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -149,6 +149,10 @@
                     display: block;
                     overflow: hidden;
                     text-overflow: ellipsis;
+                    max-height: 40px;
+                    -webkit-line-clamp: 2;
+                    -webkit-box-orient: vertical;
+                    display: -webkit-box;
                 }
             }
 
