force visibility of editor controls if a fieldset collapser is open

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -232,6 +232,10 @@
             }
         }
 
+        &.is-open > .archetypeFieldsetLabel .archetypeEditorControls {
+            opacity: 1;
+        }
+
         .archetypePropertyError {
             margin-bottom: 5px;
             padding-top: 3px;
