Fix scrunchy fieldset picker titles

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -375,7 +375,7 @@
         margin-left: 0;
     }
     li {
-        line-height: 0;
+        line-height: 20px;
     }
 
     .show-validation.ng-invalid .control-group.error .control-label {
